Somewhat cleaner sass structure

--- a/sass/_fragment_compass.scss
+++ b/sass/_fragment_compass.scss
@@ -59,7 +59,8 @@ span.keywordflow {
 }
 
 span.comment {
-    color: #dadbb1;
+    // color: #dadbb1;
+    color: #999;
     font-style: oblique;
 }
 
