Back to scrolling fragments

--- a/sass/_fragment_base.scss
+++ b/sass/_fragment_base.scss
@@ -1,44 +1,18 @@
-/*
- Basic styling for fragments shared by all themes.
-*/
-
-// TODO useless?
-// pre.fragment {
-//     border: 1px solid #C4CFE5;
-//     background-color: #FBFCFD;
-//     padding: 4px 6px;
-//     margin: 4px 8px 4px 2px;
-//     overflow: auto;
-//     word-wrap: break-word;
-//     font-size:  9pt;
-//     line-height: 125%;
-//     font-family: monospace, fixed;
-//     font-size: 105%;
-// }
+// /*
+//  Basic styling for fragments shared by all themes.
+// */
 
 div.fragment {
-    padding: 0px;
+    padding: 0;
     margin: 4px 8px 4px 2px;
     color: #bebebe;
     background-color: #323232;
     border: 5px solid #e8e8e8;
     border-radius: 3px;
-    overflow: auto;
     overflow-y: hidden;
+    overflow-x: auto;
     position: relative;
-
-    /* Put a continuous background for line number.
-     Might break for line numbers > 9999 */
-    &::before {
-        content: "";
-        border-right: 3px solid #1d7567;
-        background-color: #a0a0a0;
-        width: 45px;
-        height: 100%;
-        position: absolute;
-        left: 0;
-        z-index: 1;
-    }
+    
 }
 
 div.line {
@@ -47,9 +21,10 @@ div.line {
     min-height: 13px;
     line-height: 1.0;
     text-indent: -53px;
-    padding: 1px 0 1px 53px;
     margin: 0px;
-
+    padding: 1px 0 1px 53px;
+    white-space: pre;
+    
     @include transition-property(background-color);
     @include transition-duration(0s);
 
@@ -70,12 +45,8 @@ span.lineno {
     color: black;
     height: 100px;
     white-space: pre;
-
-    /* put above background */
-    background: none;
-    border: none;
-    position: relative;
-    z-index: 10;
+    border-right: 3px solid #1d7567;
+    background-color: #a0a0a0;
 }
 
 span.lineno a, span.lineno a:visited {
