--- a/sass/that_style.scss
+++ b/sass/that_style.scss
@@ -317,6 +317,12 @@ td.fieldname {
     font-weight: bold;
 }
 
+th.markdownTableHeadLeft, th.markdownTableHeadRight,
+th.markdownTableHeadCenter, th.markdownTableHeadNone {
+    background-color: $background-color-dark;
+    color: white;
+}
+
 .memItemLeft, .memItemRight,
 .memTemplItemLeft, .memTemplItemRight, .memTemplParams {
     font-family: monospace;
