Make memtemplate texts black monospace

--- a/sass/that_style.scss
+++ b/sass/that_style.scss
@@ -399,8 +399,9 @@ th.markdownTableHeadCenter, th.markdownTableHeadNone {
 }
 
 .memtemplate {
-    font-size: 80%;
-    color: #4665A2;
+    font-size: 100%;
+    color: black;
+    font-family: monospace;
     font-weight: normal;
     margin-left: 9px;
 }
