--- a/that_style.css
+++ b/that_style.css
@@ -582,8 +582,9 @@ th.markdownTableHeadCenter, th.markdownTableHeadNone {
   color: black; }
 
 .memtemplate {
-  font-size: 80%;
-  color: #4665A2;
+  font-size: 100%;
+  color: black;
+  font-family: monospace;
   font-weight: normal;
   margin-left: 9px; }
 
