Set font size of project number

--- a/sass/that_style.scss
+++ b/sass/that_style.scss
@@ -1041,11 +1041,10 @@ dl.section dd {
 	padding: 0px;
 }
 
-#projectnumber
-{
-	font: 50% Tahoma, Arial,sans-serif;
-	margin: 0px;
-	padding: 0px;
+#projectnumber {
+    font: 50% Roboto,sans-serif;
+    margin: 0px;
+    padding: 0px;
 }
 
 #titlearea {
