--- a/that_style.css
+++ b/that_style.css
@@ -1273,7 +1273,7 @@ dl.section dd {
   padding: 0px; }
 
 #projectnumber {
-  font: 50% Tahoma, Arial,sans-serif;
+  font: 50% Roboto,sans-serif;
   margin: 0px;
   padding: 0px; }
 
