--- a/sass/_fragment_color.scss
+++ b/sass/_fragment_color.scss
@@ -16,7 +16,7 @@ div.line:hover {
 
 span.lineno {
     color: #969696;
-    background-color: #1a1a1a;
+    background-color: #323232;
     border-right: 1px solid #3e3e3e;
 }
 
@@ -39,7 +39,7 @@ a.code, a.code:visited {
 a.codeRef, a.codeRef:visited {
     color: #3d95e6;
 }
- 
+
 span.keyword {
     color: #98f77a;
     font-weight: bold;
